# amplifier-cli-tools

./: AGENTS.md  README.md  pyproject.toml
docs/: REMOTE_MOBILE_DEV.md
src/amplifier_cli_tools/: __init__.py  cli.py  config.py  config_manager.py  dev.py  git.py  interactive.py  reset.py  setup.py  shell.py  tmux.py
src/amplifier_cli_tools/templates/: AGENTS.md  default-config.toml  minimal-tmux.conf  wezterm.lua
