[project]
name = "amplifier-cli-tools"
version = "0.1.0"
description = "CLI tools for Amplifier development workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Brian Krabach", email = "bkrabach@users.noreply.github.com" }
]
keywords = ["amplifier", "cli", "development", "tmux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []  # Zero runtime dependencies - stdlib only

[project.scripts]
amplifier-dev = "amplifier_cli_tools.cli:main_dev"
amplifier-reset = "amplifier_cli_tools.cli:main_reset"

[project.urls]
Repository = "https://github.com/bkrabach/amplifier-cli-tools"
Issues = "https://github.com/bkrabach/amplifier-cli-tools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_cli_tools"]
